src/objects/Expense__c.object
<CustomObject>
    <description>To store the day to day expenses</description>
    <fields>
        <fullName>Actual_Price__c</fullName>
        <description>Product&apos;s price</description>
        <label>Actual Price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CashbackAmount__c</fullName>
        <formula>Actual_Price__c *  (Cashback__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CashbackAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CashbackSite__c</fullName>
        <label>CashbackSite</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shopathome</fullName>
                </value>
                <value>
                    <fullName>Ebates</fullName>
                </value>
                <value>
                    <fullName>Topcashback</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>MrRebates</fullName>
                </value>
                <value>
                    <fullName>Fatwallet</fullName>
                </value>
                <value>
                    <fullName>Alaska Air</fullName>
                </value>
                <value>
                    <fullName>Rapid Rewards</fullName>
                </value>
                <value>
                    <fullName>Ultimate Rewards</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cashback__c</fullName>
        <label>Cashback%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Groceries</fullName>
                </value>
                <value>
                    <fullName>Movies</fullName>
                </value>
                <value>
                    <fullName>Clothes</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Gift Card</fullName>
                </value>
                <value>
                    <fullName>Car</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Coupon</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order#</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentMethod__c</fullName>
        <label>PaymentMethod</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Express</fullName>
                </value>
                <value>
                    <fullName>American Express GC</fullName>
                </value>
                <value>
                    <fullName>Bank of America</fullName>
                </value>
                <value>
                    <fullName>Bluebird - Bharu</fullName>
                </value>
                <value>
                    <fullName>Bluebird - Rajan</fullName>
                </value>
                <value>
                    <fullName>Chase Debit Card</fullName>
                </value>
                <value>
                    <fullName>Chase - Ink Bold</fullName>
                </value>
                <value>
                    <fullName>Chase - Ink Plus</fullName>
                </value>
                <value>
                    <fullName>Chase - Sapphire Plus</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>Kohls</fullName>
                </value>
                <value>
                    <fullName>Master GC</fullName>
                </value>
                <value>
                    <fullName>Store GC</fullName>
                </value>
                <value>
                    <fullName>Visa GC</fullName>
                </value>
                <value>
                    <fullName>Washigton Federal Debit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product name which was brought</description>
        <label>Product Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <description>Date on which the purchase was made</description>
        <label>Purchase Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RebateAmt__c</fullName>
        <label>RebateAmt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RebateStatus__c</fullName>
        <label>RebateStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Cancelled/Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rebate?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SerialNum__c</fullName>
        <description>Used to Store Serial Number</description>
        <label>SerialNum</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cashback Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Store_Name__c</fullName>
        <description>Used to store the Store information from where the purchase was made.</description>
        <label>Store Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <formula>if (Tax__c = 0, Actual_Price__c, if(isblank(Tax__c), Actual_Price__c, Actual_Price__c + (Actual_Price__c *  (Tax__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Actual_Price__c</columns>
        <columns>CashbackAmount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>